k8s-specifications/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visign-ingress
  namespace: visign-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"

    # Bật cert-manager cấp HTTPS bằng Let's Encrypt HTTP-01
    cert-manager.io/cluster-issuer: "letsencrypt-http"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - dev.visign-uit.id.vn
      secretName: visign-tls-dev

  rules:
    - host: dev.visign-uit.id.vn
      http:
        paths:
          - path: /api/predict
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /api/videos
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /api/topics
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /api/labels
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
